[gd_scene load_steps=4 format=3 uid="uid://6pqp18un1oph"]

[ext_resource type="Script" path="res://scenes/exercise_feedback_scene.gd" id="1_hsenk"]
[ext_resource type="Theme" uid="uid://c7ytyguo6rc7m" path="res://assets/themes/basic_theme.tres" id="2_y5pp3"]
[ext_resource type="PackedScene" uid="uid://dlt02v8ovk0wo" path="res://scenes/FeelingScene.tscn" id="3_4ycl3"]

[node name="ExerciseFeedbackScene" type="Node2D"]
script = ExtResource("1_hsenk")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 20.0
offset_top = 50.0
offset_right = 780.0
offset_bottom = 90.0
theme = ExtResource("2_y5pp3")
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="VBoxContainerLeft" type="VBoxContainer" parent="GridContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="LabelExercise" type="Label" parent="GridContainer/VBoxContainerLeft"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GridContainer/VBoxContainerLeft"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LabelSuccessRate" type="Label" parent="GridContainer/VBoxContainerLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="GridContainer/VBoxContainerLeft"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainerRight" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/VBoxContainerRight"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="ButtonExercise" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_y5pp3")
text = "Create New Exercise"

[node name="ButtonMainMenu" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_y5pp3")
text = "Go to Main Menu
"

[node name="Title" type="Label" parent="."]
offset_right = 800.0
offset_bottom = 50.0
theme = ExtResource("2_y5pp3")
theme_override_font_sizes/font_size = 28
text = "Exercise Feedback"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeelingScene" parent="." instance=ExtResource("3_4ycl3")]
position = Vector2(199, 400)

[connection signal="pressed" from="GridContainer/ButtonExercise" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
